verifies signature with labs sugested encoder